[UPDATE] start writing some code to test things out

--- a/HelloWorld/CMakeLists.txt
+++ b/HelloWorld/CMakeLists.txt
@@ -13,12 +13,39 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${OUTPUT_DIR_BASE}/$<CONFIG>")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${OUTPUT_DIR_BASE}/$<CONFIG>/libs")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${OUTPUT_DIR_BASE}/$<CONFIG>/libs")
 
+find_program(QT_QMAKE_EXECUTABLE qmake)
+
+if(QT_QMAKE_EXECUTABLE)
+    message(STATUS "qmake found: ${QT_QMAKE_EXECUTABLE}")
+    
+    execute_process(
+        COMMAND ${QT_QMAKE_EXECUTABLE} -query QT_INSTALL_PREFIX
+        OUTPUT_VARIABLE QT_INSTALL_PREFIX
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+    )
+
+    list(APPEND CMAKE_PREFIX_PATH "${QT_INSTALL_PREFIX}/lib/cmake")
+    message(STATUS "Qt installed here: ${QT_INSTALL_PREFIX}")
+else()
+    message(WARNING "qmake was not found in the PATH. Qt will not be automatically detected.")
+endif()
+
+find_package(Qt6 REQUIRED COMPONENTS Widgets)
+
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTORCC ON)
+
 #---------------------------------------#
 #				SOURCES					#
 #---------------------------------------#
 file(GLOB_RECURSE HW_SOURCES "Code/src/*.cpp")
 
 add_executable(HelloWorld ${HW_SOURCES})
+
+target_link_libraries(HelloWorld PRIVATE Qt6::Widgets)
+
+target_include_directories(HelloWorld PRIVATE "Code/include")
 
 #---------------------------------------#
 #                COMPILE MODE           #
